# corto

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.bak  Config.cmake.in  CortoConfig.cmake.in  CortoConfigVersion.cmake.in  LICENSE.txt  README.md  UNITY.md  Win-GenMSVC22.bat  Win-GenMSVC22.bat.bak  demo.html  package.json
example/: nxz.html
html/: LICENSE.txt  demo.html
html/js/: CORTOLoader.js  attribute.js  corto.em.js  corto.em.roomle.js  cortodecoder.js  emcorto.mjs  emcorto.wasm  stream.js  tunstall.js
html/js/emscripten/: build.roomle.sh  build.sh  buildmodule.sh  corto.em.proto.js  corto.em.proto.roomle.js  decoder_base.wasm  emcorto.cpp  emcorto.js  emcorto.mjs  emcorto.wasm  emlz4.cpp  sed_command.txt
html/js/other/: CORTOLoader.d.ts  CORTOLoader.js
include/corto/: bitstream.h  color_attribute.h  corto.h  cstream.h  decoder.h  encoder.h  index_attribute.h  point.h  tunstall.h  vertex_attribute.h
js/: CORTOLoader.js  CORTOMeshLoader.js  attribute.js  build.sh  corto.em.js  corto.js  corto_three.js  cortodecoder.js  nxz.js  nxz_three.js  tunstall.js
js/emscripten/: build.sh  buildmodule.sh  corto.em.js  corto.em.proto.js  emcorto.cpp  emcorto.html  emcorto.js  emcorto.wasm  post.js  profile.html  test.html
lib/: CMakeLists.txt
src/: CMakeLists.txt  benchmark.cpp  bitstream.cpp  bitstream.h  color_attribute.cpp  color_attribute.h  corto.pro  corto_codec.cpp  corto_codec.h  cstream.cpp  cstream.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  index_attribute.h  libcorto.pro  main.cpp  meshloader.cpp  meshloader.h  normal_attribute.cpp  normal_attribute.h  nxz.pro  nxzdecoder.cpp  nxzdecoder.h  nxzencoder.cpp  nxzencoder.h  objload.h  plan.md  point.h  rans.cpp  rans.h  timer.h  tinyply.cpp  tinyply.h  tunstall.cpp  tunstall.h  vertex_attribute.h  zpoint.h
unity/: CortoDecodingObject.cs  CortoMeshLoader.cs
